moved designer/abstractformeditor.pp to ideintf/formeditingintf.pas
 SVN 5744@trunk

--- a/designer/changeclassdialog.lfm
+++ b/designer/changeclassdialog.lfm
@@ -58,6 +58,7 @@ object ChangeClassDlg: TChangeClassDlg
     Width = 200
     object NewClassComboBox: TComboBox
       MaxLength = 0
+      OnEditingDone = NewClassComboBoxEditingDone
       TabOrder = 0
       Text = 'NewClassComboBox'
       Left = 14
