* adapt example to the package
 SVN 5861@trunk

--- a/components/images/examples/mainform.lfm
+++ b/components/images/examples/mainform.lfm
@@ -22,7 +22,8 @@ object ImagesExampleForm: TImagesExampleForm
     Width = 425
     object Image1: TImage
       Align = alClient
-      Proportional = True
+      AutoSize = True
+      Center = True
       Transparent = True
       Height = 315
       Width = 421
